classDiagram
    class Application {
        +print_header(title:  str)
        +main()
    }
    
    class Fisherman {
        -name: str
        -location:  Optional[str]
        -is_fishing: bool
        -catch_log: CatchLog
        -_catch_log_service: CatchLogService
        +__init__(name: str, catch_log_service: CatchLogService)
        +set_catch_log_service(service: CatchLogService)
        +check_depth_map()
        +check_fishing_spots()
        +start_fishing(location: str)
        +log_catch(fish_species: str, weight:  float)
        +end_fishing()
        +get_catch_summary() dict
        +display_info()
        +__str__() str
    }
    
    class CatchLog {
        -entries: List[dict]
        +__init__()
        +add_entry(fish_species: str, weight: float)
        +get_entries() List[dict]
        +get_total_weight() float
        +get_catch_count() int
        +clear()
        +display_summary()
    }
    
    class CatchLogService {
        -db_path: str
        +__init__(db_path: str)
        -_initialize_database()
        +save_catch(fisherman_name: str, fish_species:  str, weight: float)
        +get_all_catches(fisherman_name: str) List[dict]
        +get_catch_summary(fisherman_name: str) dict
    }
    
    class FishingTrip {
        -location: str
        -fisherman_name: str
        -depth_map: str
        -fishing_spots: List[str]
        -start_time: datetime
        -end_time: Optional[datetime]
        -is_active: bool
        +__init__(location: str, fisherman_name: str, depth_map: str, fishing_spots: List[str])
        +start()
        +end()
        +get_fishing_plan() str
        +__str__() str
    }
    
    class Sensor {
        -sensor_id: str
        -location: str
        -last_temperature: Optional[float]
        -last_quality: Optional[str]
        +__init__(sensor_id: str, location: str)
        +measure_temperature() float
        +measure_water_quality() str
        +get_sensor_data() dict
        +__str__() str
    }
    
    class Ecologist {
        -name: str
        +__init__(name: str)
        +get_water_condition_report(sensor:  Sensor)
        +analyze_environment(location: str)
        -_analyze_conditions(temperature: float, quality: str)
    }
    
    class WeatherService {
        +get_weather_forecast(location: str)$ dict
        +is_suitable_for_fishing(forecast: dict)$ bool
    }
    
    Fisherman --> CatchLog :  uses
    Fisherman --> CatchLogService :  uses
    Ecologist --> Sensor : analyzes data from
    Application --> Fisherman : creates
    Application --> FishingTrip : creates
    Application --> Sensor : creates
    Application --> Ecologist :  creates
    Application --> CatchLogService : creates
    Application --> WeatherService : uses
    FishingTrip --> Fisherman : references